[metadata]
name = ihop
version = 1.0.0
description = Visualizations and model training to create and compare text-based and user-based clusterings of Reddit.

[options]
python_requires => 3.9
packages = ihop
install_requires =
    dash==2.3.1
    dash-bootstrap-components==1.1.0
    dash-core-components==2.0.0
    dash-daq==0.5.0
    dash-html-components==2.0.0
    dash-renderer==1.9.0
    dash-table==5.0.0
    gensim==4.1.2
    matplotlib==3.5.0
    numpy==1.21.2
    pandas==1.3.4
    plotly==5.6.0
    pyspark==3.2.0
    pytimeparse==1.1.8
    scikit-learn==1.0.1
    seaborn==0.11.0

[options.extras_require]
test =
    pytest

dev =
    black
    jupyter
