[metadata]
name = ihop
version = 1.0.0
description = Tools for clustering Reddit based on NLP techniques
long_description = = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = <=3.10, >=3.8
packages = ihop
install_requires =
    dvc[s3]==2.10.0
    gensim==4.1.2
    joblib==1.1.0
    numpy==1.21.2
    matplotlib==3.5.0
    pandas==1.3.4
    pyspark==3.2.0
    pytimeparse==1.1.8
    s3fs[boto3]>=2022.3.0
    scikit-learn==1.0.1

[options.extras_require]
app =
    plotly==5.6.0
    dash==2.3.1
    dash-bootstrap-components==1.1.0
    dash-core-components==2.0.0
    dash-daq==0.5.0
    dash-html-components==2.0.0
    dash-renderer==1.9.0
    dash-table==5.0.0
    matplotlib==3.5.0
dev =
    black
    jupyter
    plotly==5.6.0
    seaborn
test =
    pytest


