[metadata]
name = ihop
version = 2.1.0
description = Tools for clustering Reddit based on NLP techniques
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
python_requires = >=3.8,<3.11
packages = find:
include_package_data = True
install_requires =
    dvc[s3]==3.33.1
    gensim>=4.3.0
    joblib>=1.1.0
    numpy>=1.22.0,<1.25.0
    matplotlib==3.5.0
    pandas>=1.3.5
    pyspark>=3.2.0
    pytimeparse==1.1.8
    scipy<1.13
    s3fs[boto3]>=2022.3.0
    scikit-learn>=1.2.0,<1.4.0

[options.extras_require]
app =
    dash==2.3.1
    dash-bootstrap-components==1.1.0
    dash-core-components==2.0.0
    dash-daq==0.5.0
    dash-html-components==2.0.0
    dash-renderer==1.9.0
    dash-table==5.0.0
    gunicorn
    matplotlib==3.5.0
    plotly==5.6.0
dev =
    black
    irrCAC
    jupyter
    ipython
    plotly==5.6.0
    seaborn
    statsmodels
    yellowbrick
test =
    pytest



